[package]
name = "isbn"
version = "0.1.0"
authors = ["mafumafuultu <mafumafuultuForGit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.1.0"
serde = { version = "1.0.123", features = ["derive"] }
async-std = { version = "1.9.0", features = ["attributes"] }
xml-rs = "0.8.3"