[package]
name = "isbn"
version = "0.1.0"
authors = ["mafumafuultu <mafumafuultuForGit@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.3.2"
serde = { version = "1.0.135", features = ["derive"] }
async-std = { version = "1.10.0", features = ["attributes"] }
xml-rs = "0.8.4"
